<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mehta.ands6a1.ActivityLogin">

    <!-- Simple UI with Email Textbox, Password Textbox, Login Button and Login Status Label -->
    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="Enter Email"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtEmail"
            android:layout_below="@+id/txtEmail"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Enter Password"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"
            android:text="Login"
            android:onClick="btnLoginClick"
            />

        <TextView
            android:id="@+id/lblNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="Not yet registerd! Register here."
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <TextView
            android:id="@+id/lblLoginStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblNewUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:text="Login Status"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
